<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/title_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/main_instructions"
        />

    <!--  This will contain flash card decks found in the user data folder.    -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:padding="5dp"
        >

        <!-- This is where we will populate available custom presets.    -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_file_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blk_border_wht_back_thick"
            android:layout_gravity="center"
            android:fadeScrollbars="false"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset"
            android:scrollbarTrackVertical="@color/scrollbar_base"
            android:scrollbarSize="10dp"
            />

    </FrameLayout>

    <Button
        android:id="@+id/button_launch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_launch_deck"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/button_edit_deck"
            />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/button_delete_deck"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/text_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/label_or"
        />

    <Button
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_create_deck"
        />

</LinearLayout>
